--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trivia</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h3>What is the capital of India?</h3>
+    <div>
+        <input type="Radio" name="capital" value="New Delhi">
+        New Delhi
+    </div>
+    <div>
+        <input type="Radio" name="capital" value="Mumbai">
+        Mumbai
+    </div>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" style=" max-width: 600px; margin: 10px; padding: 15px; border-left: 8px solid green;background-color: #f8fffe; font-weight: bold;">
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+ </blockquote>
 </body>
-
 </html>
